# aula18

./: exemplo_00.py  pyproject.toml
src/: db.py  pokemon.db  schema.py
